--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
+/*
+=======
+Reset CSS
+=======
+*/
+
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+html, body {
+  font-size: 62.5%;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*
+===========
+Styles view
+===========
+*/
+
+.app {
+  background-color: rgba(79, 116, 222, 0.8);
+  min-height: 100vh;
 }
